// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`array fields array 1`] = `
<form
  className="ui form rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="grouped equal width fields"
  >
    <div
      className="field field-array field-array-of-string sortable-form-fields"
    >
      <div>
        <div
          className="row array-item-list"
        />
        <div
          style={
            Object {
              "marginTop": "1rem",
              "position": "relative",
              "textAlign": "right",
            }
          }
        >
          <button
            className="ui tiny icon left labeled button"
            onClick={[Function]}
          >
            <i
              aria-hidden="true"
              className="plus icon"
              onClick={[Function]}
            />
            Add Item
          </button>
        </div>
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-info"
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`array fields checkboxes 1`] = `
<form
  className="ui form rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="grouped equal width fields"
  >
    <div
      className="field"
    >
      <div
        aria-disabled={false}
        aria-expanded={false}
        aria-multiselectable={true}
        autoFocus={false}
        className="ui fluid multiple selection scrolling dropdown"
        inverted="false"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        readOnly={false}
        required={false}
        role="listbox"
        tabIndex={0}
      >
        <div
          aria-atomic={true}
          aria-live="polite"
          className="text"
          role="alert"
        />
        <i
          aria-hidden="true"
          className="dropdown icon"
          onClick={[Function]}
        />
        <div
          className="menu transition"
        >
          <div
            aria-checked={false}
            aria-disabled={false}
            aria-selected={true}
            className="selected item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }
          >
            <span
              className="text"
            >
              a
            </span>
          </div>
          <div
            aria-checked={false}
            aria-disabled={false}
            aria-selected={false}
            className="item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }
          >
            <span
              className="text"
            >
              b
            </span>
          </div>
          <div
            aria-checked={false}
            aria-disabled={false}
            aria-selected={false}
            className="item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }
          >
            <span
              className="text"
            >
              c
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-info"
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`array fields fixed array 1`] = `
<form
  className="ui form rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="grouped equal width fields"
  >
    <div
      className="field field-array field-array-fixed-items"
    >
      <div>
        <div
          className="row array-item-list"
        >
          <div
            className="array-item"
          >
            <div
              className="ui grid"
              style={
                Object {
                  "alignItems": "center",
                  "display": "grid",
                  "gridTemplateColumns": "1fr 65px",
                }
              }
            >
              <div
                className="middle aligned sixteen wide column"
              >
                <div
                  className="grouped equal width fields"
                >
                  <div
                    className="required field"
                  >
                    <div
                      className="ui fluid input"
                    >
                      <input
                        autoFocus={false}
                        disabled={false}
                        id="root_0"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder=""
                        required={true}
                        type="string"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="array-item"
          >
            <div
              className="ui grid"
              style={
                Object {
                  "alignItems": "center",
                  "display": "grid",
                  "gridTemplateColumns": "1fr 65px",
                }
              }
            >
              <div
                className="middle aligned sixteen wide column"
              >
                <div
                  className="grouped equal width fields"
                >
                  <div
                    className="required field"
                  >
                    <div
                      className="ui fluid input"
                    >
                      <input
                        autoFocus={false}
                        disabled={false}
                        id="root_1"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder=""
                        required={true}
                        type="number"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-info"
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;
